<resources>
    <string name="app_name">MediaLibrary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_browse">Browse</string>
    <string name="browse_button">Browse</string>
    <string name="menu_library">Library</string>
    <string name="title_activity_media_library">MediaLibraryActivity</string>
    <string name="library_title_artists">Artists</string>
    <string name="library_title_albums">Albums</string>
    <string name="library_title_songs">Songs</string>
    <string name="library_title_videos">Videos</string>
    <string name="tabs_default_title">Tab</string>
    <string name="snackbar_add_media">Add Media</string>
    <string name="snackbar_add_playlist">Add Playlist</string>
    <string name="menu_add_media">Add Media</string>
    <string name="add_media_fragment_label">Add Media</string>
    <string name="library_fragment_label">Media Library</string>
    <string name="button_add_media_file">Add Media File</string>
    <string name="button_add_directory">Add Directory</string>
    <string name="request_permissions_denied">Storage permissions denied.</string>
    <string name="audio_list_item_desc">Library audio item image</string>
    <string name="audio_list_empty">No audio files found.</string>
    <string name="menu_track_list">Track List</string>
    <string name="menu_now_playing">Now Playing</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_play_song">Play</string>
    <string name="menu_add_to_queue">Add to queue</string>
    <string name="items_selected_amount">%1$d selected</string>
    <string name="menu_player">Player</string>
    <string name="channel_description">Music channel</string>
    <string name="channel_name">Audio channel</string>
    <string name="pause">pause</string>
    <string name="audio_stop_content_description">Stop button for audio player</string>
    <string name="audio_shuffle_content_description">Shuffle button for audio player</string>
    <string name="audio_play_pause_content_description">Play/Pause button for audio player</string>
    <string name="audio_previous_content_description">Previous track button for audio player</string>
    <string name="audio_next_content_description">Next track button for audio player</string>
    <string name="empty_queue_text">Queue is empty.</string>
    <string name="empty_list_text">List is empty.</string>
    <string name="play_button_text">Play</string>
    <string name="stop_button_text">Stop</string>
    <string name="audio_player_fragment_header_text">Audio Player</string>
    <string name="audio_retrieve_error_text">"Error retrieving audio."</string>
    <string name="add_playlist_text_hint">Playlist name</string>
    <string name="add_playlist_dialogue_title">Add New Playlist</string>
    <string name="add_playlist_dialogue_add_button">Add Playlist</string>
    <string name="add_playlist_dialogue_cancel_button">Cancel</string>
    <string name="list_popup_add_to_playlist_title">Add to Playlist</string>
    <string name="library_list_back_button_desc">Library list back button</string>
    <string name="audio_repeat_content_description">Audio repeat button</string>
    <string name="audio_art_content_description">Audio art image</string>
    <string name="menu_clear_queue_text">Clear Queue</string>
</resources>
